--- a/app/src/main/res/layout/fragment_toolbox.xml
+++ b/app/src/main/res/layout/fragment_toolbox.xml
@@ -16,6 +16,20 @@
 
 
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:gravity="center"
+            app:layout_flexGrow="1">
+
+            <EditText
+                style="@style/FlexItem"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:hint="Numero de medidor"
+                app:layout_flexGrow="1" />
+
+        </LinearLayout>
 
 
             <TextView
