--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -18,7 +18,8 @@
 
                 <EditText android:id="@+id/txtEmail"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" android:hint="email"
+                    android:layout_height="wrap_content"
+                    android:text="Escriba su email"
                     android:inputType="textEmailAddress" android:maxLines="1"
                     android:singleLine="true" />
 
