--- a/app/src/main/res/layout/fragment_toolbox.xml
+++ b/app/src/main/res/layout/fragment_toolbox.xml
@@ -51,32 +51,30 @@
 
 
         <android.support.v7.widget.AppCompatButton
+            android:id="@+id/btnStarteTkw"
             android:layout_width="100dp"
             android:layout_height="40dp"
             android:text="iniciar"
             app:layout_flexGrow="1"
-            app:layout_flexBasisPercent="20%" />
+            app:layout_flexBasisPercent="50%" />
         <android.support.v7.widget.AppCompatButton
+            android:id="@+id/btnStopTkw"
             android:layout_width="100dp"
             android:layout_height="40dp"
             android:text="detener"
             app:layout_flexGrow="1"
-            app:layout_flexBasisPercent="20%" />
-        <android.support.v7.widget.AppCompatButton
-            android:layout_width="100dp"
-            android:layout_height="40dp"
-            android:text="Reiniciar"
-            app:layout_flexGrow="1"
-            app:layout_flexBasisPercent="20%" />
-        <TextView
+            app:layout_flexBasisPercent="50%" />
+
+        <Chronometer
+            android:id="@+id/chronoTkw"
             android:layout_width="180dp"
             android:layout_height="40dp"
+            android:background="#c3c1c1"
+            android:format="%s"
             android:gravity="center"
             android:textSize="20dp"
-            android:text="00:00:00"
-            android:background="#c3c1c1"
-            app:layout_flexGrow="1"
-            app:layout_flexBasisPercent="55%" />
+            app:layout_flexBasisPercent="100%"
+            app:layout_flexGrow="1"/>
 
 
 
